--- a/Home/views/Home.ejs
+++ b/Home/views/Home.ejs
@@ -135,6 +135,7 @@
 
 </head>
 <body>
+        <%= products %>
 
     <!-- Navigation -->
      <%- include("./Navbar")%>
@@ -329,7 +330,19 @@
 
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/public/js/InedxScript.js"></script>
-
+    <script >
+        document.querySelector("#btnSearchBar").addEventListener("click",async(e)=>{
+                let searchBarData =  document.querySelector("#searchBar").value
+                await fetch("http://localhost:8090/SearchBar",{
+                        method:"POST",
+                        headers: {
+                                "Content-Type": "application/x-www-form-urlencoded",
+                        },
+  // Automatically converted to "username=example&password=password"
+                        body: new URLSearchParams({ data: searchBarData}),
+                        })
+        e.preventDefault()
+     })
+    </script>
 </body>
 </html>
