--- a/AdminDashboard/views/AdminDashboard.ejs
+++ b/AdminDashboard/views/AdminDashboard.ejs
@@ -73,7 +73,7 @@
                                 <h5 class="card-title mb-0">Product Information</h5>
                             </div>
                             <div class="card-body">
-                                     <form id="createProductForm " action="/Product/AddProduct" method="post">
+                                     <form id="createProductForm " action="/Product/AddProduct" method="post" enctype="multipart/form-data">
                                     <div class="row">
                                         <!-- Basic Information -->
                                         <div class="col-md-8">
@@ -122,6 +122,20 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <!-- <div class="form-check form-switch">
+  <input class="form-check-input" name="" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+  <label class="form-check-label" for="flexSwitchCheckDefault">Sale</label> -->
+</div>
+<div class="form-check form-switch">
+  <input class="form-check-input" name="productNew" type="checkbox" role="switch" id="flexSwitchCheckChecked" >
+  <label class="form-check-label" for="flexSwitchCheckChecked">New</label>
+</div>
+ <div class="form-check form-switch">
+  <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDisabled" >
+  <label class="form-check-label" for="flexSwitchCheckDisabled">Sale</label>
+</div>
+
+</div>
 
                                             <div class="mb-3">
                                                 <label for="productDescription" class="form-label">Description</label>
@@ -133,7 +147,7 @@
                                         <div class="col-md-4">
                                             <div class="mb-3">
                                                 <label for="productImage" class="form-label">Product Image</label>
-                                                <input type="file" class="form-control" id="productImage" name="image" accept="image/*">
+                                                <input type="file" class="form-control" id="productImage" name="image" >
                                                 <div class="form-text">Upload product image (JPEG, PNG, GIF, WebP)</div>
                                             </div>
 
@@ -179,7 +193,7 @@
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
+<script src="/js/A.js"></script>
     <script>
         // Image preview functionality
         document.getElementById('productImage').addEventListener('change', function(e) {
